# NCR-AI-Desk

./: .env.example  .gitignore  README.md  desk.ps1  pom.xml  run.cmd  start-api.cmd  start-docs.cmd  start-qwen.cmd  start-web.cmd  start.cmd  stop.cmd
ai-service/: Cargo.toml
ai-service/src/: chat.rs  doc_service.rs  documents.rs  embeddings.rs  gemini.rs  groq.rs  kb.rs  llm.rs  main.rs  nlp.rs  pdf.rs  perplexity.rs  qdrant_rag.rs  session.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  EVALUATION.md  PROJECT-STRUCTURE.md  README.md  SETUP.md  TRAINING.md
qwen-service/: document_tools.py  requirements.txt  server.py
scripts/: install-git-hooks.ps1  prepare-commit-msg
slides/: AIDesk Proj Documentation.docx
src/main/java/com/ncr/desk/: AiDeskFrontendApplication.java
src/main/java/com/ncr/desk/api/: AiDeskClient.java  BackendApiException.java  ChatController.java  DeskApiController.java  DeskExceptionHandler.java
src/main/java/com/ncr/desk/api/dto/: ApiError.java  AppendChatMessageRequest.java  AskRequest.java  AskResponse.java  BackendHealth.java  ChatDetail.java  ChatMessage.java  ChatSummary.java  ChatTurn.java  CreateChatRequest.java  (+5 more)
src/main/java/com/ncr/desk/chat/: ChatNotFoundException.java  ChatService.java
src/main/java/com/ncr/desk/config/: DeskConfiguration.java  DeskProperties.java
src/main/java/com/ncr/desk/persistence/: ConversationEntity.java  ConversationRepository.java  MessageEntity.java  MessageRepository.java
src/main/resources/: application.properties
src/main/resources/static/: app.js  index.html  styles.css
