[package]
name = "company-ai-desk"
version = "0.1.0"
edition = "2021"
description = "NCR Tech Solutions internal AI desk — contacts, procedures, office info"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
# native-tls uses Windows Schannel — more reliable for Qdrant Cloud HTTPS than rustls alone
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "multipart"] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
